Packages_2024/llvm-project_20.1.2/llvm/Core.inc


function LLVMTypeOf(Val: TLLVMValueRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGetValueKind(Val: TLLVMValueRef): TLLVMValueKind; cdecl; external libllvm;
function LLVMGetValueName2(Val: TLLVMValueRef; Length: Psize_t): pchar; cdecl; external libllvm;
procedure LLVMSetValueName2(Val: TLLVMValueRef; Name: pchar; NameLen: Tsize_t); cdecl; external libllvm;
procedure LLVMDumpValue(Val: TLLVMValueRef); cdecl; external libllvm;
function LLVMPrintValueToString(Val: TLLVMValueRef): pchar; cdecl; external libllvm;
function LLVMGetValueContext(Val: TLLVMValueRef): TLLVMContextRef; cdecl; external libllvm;
function LLVMPrintDbgRecordToString(_Record: TLLVMDbgRecordRef): pchar; cdecl; external libllvm;
procedure LLVMReplaceAllUsesWith(OldVal: TLLVMValueRef; NewVal: TLLVMValueRef); cdecl; external libllvm;
function LLVMIsConstant(Val: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
function LLVMIsUndef(Val: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
function LLVMIsPoison(Val: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
function LLVMIsAMDNode(Val: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMIsAValueAsMetadata(Val: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMIsAMDString(Val: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetValueName(Val: TLLVMValueRef): pchar; cdecl; external libllvm;
procedure LLVMSetValueName(Val: TLLVMValueRef; Name: pchar); cdecl; external libllvm;
function LLVMGetFirstUse(Val: TLLVMValueRef): TLLVMUseRef; cdecl; external libllvm;
function LLVMGetNextUse(U: TLLVMUseRef): TLLVMUseRef; cdecl; external libllvm;
function LLVMGetUser(U: TLLVMUseRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetUsedValue(U: TLLVMUseRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetOperand(Val: TLLVMValueRef; Index: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetOperandUse(Val: TLLVMValueRef; Index: dword): TLLVMUseRef; cdecl; external libllvm;
procedure LLVMSetOperand(User: TLLVMValueRef; Index: dword; Val: TLLVMValueRef); cdecl; external libllvm;
function LLVMGetNumOperands(Val: TLLVMValueRef): longint; cdecl; external libllvm;
function LLVMConstNull(Ty: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstAllOnes(Ty: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetUndef(Ty: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetPoison(Ty: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMIsNull(Val: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
function LLVMConstPointerNull(Ty: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstInt(IntTy: TLLVMTypeRef; N: qword; SignExtend: TLLVMBool): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstIntOfArbitraryPrecision(IntTy: TLLVMTypeRef; NumWords: dword; Words: Puint64_t): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstIntOfString(IntTy: TLLVMTypeRef; Text: pchar; Radix: Tuint8_t): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstIntOfStringAndSize(IntTy: TLLVMTypeRef; Text: pchar; SLen: dword; Radix: Tuint8_t): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstReal(RealTy: TLLVMTypeRef; N: double): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstRealOfString(RealTy: TLLVMTypeRef; Text: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstRealOfStringAndSize(RealTy: TLLVMTypeRef; Text: pchar; SLen: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstIntGetZExtValue(ConstantVal: TLLVMValueRef): qword; cdecl; external libllvm;
function LLVMConstIntGetSExtValue(ConstantVal: TLLVMValueRef): int64; cdecl; external libllvm;
function LLVMConstRealGetDouble(ConstantVal: TLLVMValueRef; losesInfo: PLLVMBool): double; cdecl; external libllvm;
function LLVMConstStringInContext(C: TLLVMContextRef; Str: pchar; Length: dword; DontNullTerminate: TLLVMBool): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstStringInContext2(C: TLLVMContextRef; Str: pchar; Length: Tsize_t; DontNullTerminate: TLLVMBool): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstString(Str: pchar; Length: dword; DontNullTerminate: TLLVMBool): TLLVMValueRef; cdecl; external libllvm;
function LLVMIsConstantString(c: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
function LLVMGetAsString(c: TLLVMValueRef; Length: Psize_t): pchar; cdecl; external libllvm;
function LLVMConstStructInContext(C: TLLVMContextRef; ConstantVals: PLLVMValueRef; Count: dword; Pack: TLLVMBool): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstStruct(ConstantVals: PLLVMValueRef; Count: dword; Pack: TLLVMBool): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstArray(ElementTy: TLLVMTypeRef; ConstantVals: PLLVMValueRef; Length: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstArray2(ElementTy: TLLVMTypeRef; ConstantVals: PLLVMValueRef; Length: Tuint64_t): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstNamedStruct(StructTy: TLLVMTypeRef; ConstantVals: PLLVMValueRef; Count: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetAggregateElement(C: TLLVMValueRef; Idx: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetElementAsConstant(C: TLLVMValueRef; idx: dword): TLLVMValueRef; cdecl; external libllvm; deprecated;
function LLVMConstVector(ScalarConstantVals: PLLVMValueRef; Size: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstantPtrAuth(Ptr: TLLVMValueRef; Key: TLLVMValueRef; Disc: TLLVMValueRef; AddrDisc: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetConstOpcode(ConstantVal: TLLVMValueRef): TLLVMOpcode; cdecl; external libllvm;
function LLVMAlignOf(Ty: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMSizeOf(Ty: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstNeg(ConstantVal: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstNSWNeg(ConstantVal: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstNUWNeg(ConstantVal: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm; deprecated;
function LLVMConstNot(ConstantVal: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstAdd(LHSConstant: TLLVMValueRef; RHSConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstNSWAdd(LHSConstant: TLLVMValueRef; RHSConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstNUWAdd(LHSConstant: TLLVMValueRef; RHSConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstSub(LHSConstant: TLLVMValueRef; RHSConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstNSWSub(LHSConstant: TLLVMValueRef; RHSConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstNUWSub(LHSConstant: TLLVMValueRef; RHSConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstMul(LHSConstant: TLLVMValueRef; RHSConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstNSWMul(LHSConstant: TLLVMValueRef; RHSConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstNUWMul(LHSConstant: TLLVMValueRef; RHSConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstXor(LHSConstant: TLLVMValueRef; RHSConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstGEP2(Ty: TLLVMTypeRef; ConstantVal: TLLVMValueRef; ConstantIndices: PLLVMValueRef; NumIndices: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstInBoundsGEP2(Ty: TLLVMTypeRef; ConstantVal: TLLVMValueRef; ConstantIndices: PLLVMValueRef; NumIndices: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstGEPWithNoWrapFlags(Ty: TLLVMTypeRef; ConstantVal: TLLVMValueRef; ConstantIndices: PLLVMValueRef; NumIndices: dword; NoWrapFlags: TLLVMGEPNoWrapFlags): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstTrunc(ConstantVal: TLLVMValueRef; ToType: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstPtrToInt(ConstantVal: TLLVMValueRef; ToType: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstIntToPtr(ConstantVal: TLLVMValueRef; ToType: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstBitCast(ConstantVal: TLLVMValueRef; ToType: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstAddrSpaceCast(ConstantVal: TLLVMValueRef; ToType: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstTruncOrBitCast(ConstantVal: TLLVMValueRef; ToType: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstPointerCast(ConstantVal: TLLVMValueRef; ToType: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstExtractElement(VectorConstant: TLLVMValueRef; IndexConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstInsertElement(VectorConstant: TLLVMValueRef; ElementValueConstant: TLLVMValueRef; IndexConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMConstShuffleVector(VectorAConstant: TLLVMValueRef; VectorBConstant: TLLVMValueRef; MaskConstant: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBlockAddress(F: TLLVMValueRef; BB: TLLVMBasicBlockRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetBlockAddressFunction(BlockAddr: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetBlockAddressBasicBlock(BlockAddr: TLLVMValueRef): TLLVMBasicBlockRef; cdecl; external libllvm;
function LLVMConstInlineAsm(Ty: TLLVMTypeRef; AsmString: pchar; Constraints: pchar; HasSideEffects: TLLVMBool; IsAlignStack: TLLVMBool): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetGlobalParent(Global: TLLVMValueRef): TLLVMModuleRef; cdecl; external libllvm;
function LLVMIsDeclaration(Global: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
function LLVMGetLinkage(Global: TLLVMValueRef): TLLVMLinkage; cdecl; external libllvm;
procedure LLVMSetLinkage(Global: TLLVMValueRef; Linkage: TLLVMLinkage); cdecl; external libllvm;
function LLVMGetSection(Global: TLLVMValueRef): pchar; cdecl; external libllvm;
procedure LLVMSetSection(Global: TLLVMValueRef; Section: pchar); cdecl; external libllvm;
function LLVMGetVisibility(Global: TLLVMValueRef): TLLVMVisibility; cdecl; external libllvm;
procedure LLVMSetVisibility(Global: TLLVMValueRef; Viz: TLLVMVisibility); cdecl; external libllvm;
function LLVMGetDLLStorageClass(Global: TLLVMValueRef): TLLVMDLLStorageClass; cdecl; external libllvm;
procedure LLVMSetDLLStorageClass(Global: TLLVMValueRef; _Class: TLLVMDLLStorageClass); cdecl; external libllvm;
function LLVMGetUnnamedAddress(Global: TLLVMValueRef): TLLVMUnnamedAddr; cdecl; external libllvm;
procedure LLVMSetUnnamedAddress(Global: TLLVMValueRef; UnnamedAddr: TLLVMUnnamedAddr); cdecl; external libllvm;
function LLVMGlobalGetValueType(Global: TLLVMValueRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMHasUnnamedAddr(Global: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetUnnamedAddr(Global: TLLVMValueRef; HasUnnamedAddr: TLLVMBool); cdecl; external libllvm;
function LLVMGetAlignment(V: TLLVMValueRef): dword; cdecl; external libllvm;
procedure LLVMSetAlignment(V: TLLVMValueRef; Bytes: dword); cdecl; external libllvm;
procedure LLVMGlobalSetMetadata(Global: TLLVMValueRef; Kind: dword; MD: TLLVMMetadataRef); cdecl; external libllvm;
procedure LLVMGlobalEraseMetadata(Global: TLLVMValueRef; Kind: dword); cdecl; external libllvm;
procedure LLVMGlobalClearMetadata(Global: TLLVMValueRef); cdecl; external libllvm;
function LLVMGlobalCopyAllMetadata(Value: TLLVMValueRef; NumEntries: Psize_t): PLLVMValueMetadataEntry; cdecl; external libllvm;
procedure LLVMDisposeValueMetadataEntries(Entries: PLLVMValueMetadataEntry); cdecl; external libllvm;
